--- a/apps/templates/home/layout-overlay-sidebar.html
+++ b/apps/templates/home/layout-overlay-sidebar.html
@@ -45,7 +45,7 @@
 					<div class="page-inner py-5">
 						<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
 							<div>
-								<h2 class="text-white pb-2 fw-bold">Dashboard</h2>
+								<h2 class="text-white pb-2 fw-bold">Dasheeeboard</h2>
 								<h5 class="text-white op-7 mb-2">Premium Bootstrap 4 Admin Dashboard</h5>
 							</div>
 							<div class="ml-md-auto py-2 py-md-0">
