--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<title>
-        Flask Atlantis Dark - {% block title %}{% endblock %} | AppSeed
+        Krishi Mitra Dashboard| Abhigya
     </title>
 
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
