--- a/apps/templates/includes/sidebar1.html
+++ b/apps/templates/includes/sidebar1.html
@@ -60,7 +60,7 @@
           <h4 class="text-section">Main menu</h4>
         </li>
         <li class="nav-item {% if 'ui-' in segment %} active {% endif %}">
-          <a data-toggle="collapse" href="#base">
+          <a href="/goWhatsapp.html">
             <i class="fas fa-layer-group"></i>
             <p>Krishi Mitra Bot</p>
             <!-- <span class="caret"></span> -->
@@ -116,7 +116,7 @@
               <li
                 class="{% if 'ui-simpleline' in segment %} active {% endif %}"
               >
-                <a href="/ui-simpleline.html">
+                <a href="/ui-simpleline.html"
                   <span class="sub-item">Simple Line Icons</span>
                 </a>
               </li>
@@ -136,7 +136,7 @@
           </div> -->
         </li>
         <li class="nav-item {% if 'layout' in segment %} active {% endif %}">
-          <a data-toggle="collapse" href="#">
+          <a href="/predictionPage.html">
             <i class="fas fa-th-list"></i>
             <p>Crop Prediction</p>
             <!-- <span class="caret"></span> -->
@@ -144,35 +144,35 @@
         </li>
 
         <li class="nav-item {% if 'form' in segment %} active {% endif %}">
-          <a data-toggle="collapse" href="#forms">
+          <a  href="#forms">
             <i class="fas fa-pen-square"></i>
             <p>Krishi Charcha</p>
             <!-- <span class="caret"></span> -->
 		  </a>
         </li>
         <li class="nav-item {% if 'tables' in segment %} active {% endif %}">
-          <a data-toggle="collapse" href="#">
+          <a  href="#">
             <i class="fas fa-table"></i>
             <p>Agri Events</p>
             <!-- <span class="caret"></span> -->
           </a>
         </li>
 		<li class="nav-item {% if 'form' in segment %} active {% endif %}">
-			<a data-toggle="collapse" href="#forms">
+			<a  href="#forms">
 			  <i class="fas fa-pen-square"></i>
 			  <p>Krishi TV</p>
 			  <!-- <span class="caret"></span> -->
 			</a>
 		  </li>
 		  <li class="nav-item {% if 'form' in segment %} active {% endif %}">
-			<a data-toggle="collapse" href="#forms">
+			<a  href="#forms">
 			  <i class="fas fa-pen-square"></i>
 			  <p>Nearby APMC</p>
 			  <!-- <span class="caret"></span> -->
 			</a>
 		  </li>
 		  <li class="nav-item {% if 'form' in segment %} active {% endif %}">
-			<a data-toggle="collapse" href="#forms">
+			<a  href="#forms">
 			  <i class="fas fa-pen-square"></i>
 			  <p>Government Schemes</p>
 			  <!-- <span class="caret"></span> -->
