--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -56,7 +56,7 @@
   <body>
     <div class="wrapper">
       {% include 'includes/navigation.html' %} 
-      {% include'includes/sidebar1.html' %}
+      {% include'includes/sidebar1.html' %}   
       <div
         class="modal fade"
         id="exampleModalCenter"
@@ -130,11 +130,7 @@
                 </div>
                 <div class="ml-md-auto py-2 py-md-0">
                   <a href="#" class="btn btn-white btn-border btn-round mr-2"
-                    >Manage</a
-                  >
-                  <a href="#" class="btn btn-secondary btn-round"
-                    >Add Customer</a
-                  >
+                    >Connect to Whatsapp bot</a>
                 </div>
               </div>
             </div>
@@ -201,7 +197,7 @@
                         <small class="text-muted">Mukhya Bajar Peth | Nafed</small>
                       </div>
                       <div class="d-flex ml-auto align-items-center">
-                        <h3 class="text-info fw-bold">₹ 5,780 per quintal</h3>
+                        <h3 class="text-info fw-bold">₹ 5,780</h3>
                       </div>
                     </div>
                     <div class="separator-dashed"></div>
@@ -218,7 +214,7 @@
                         <small class="text-muted">Jilha Bajar | Nafed</small>
                       </div>
                       <div class="d-flex ml-auto align-items-center">
-                        <h3 class="text-info fw-bold">₹ 2,820 per quintal</h3>
+                        <h3 class="text-info fw-bold">₹ 2,820</h3>
                       </div>
                     </div>
                     <div class="separator-dashed"></div>
@@ -235,7 +231,7 @@
                         <small class="text-muted">Sanity Market | Nafed</small>
                       </div>
                       <div class="d-flex ml-auto align-items-center">
-                        <h3 class="text-info fw-bold">₹ 2,820 per quintal</h3>
+                        <h3 class="text-info fw-bold">₹ 2,820</h3>
                       </div>
                     </div>
                     <div class="separator-dashed"></div>
@@ -249,11 +245,11 @@
             </div>
             <div class="row">
              
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="card full-height">
                   <div class="card-header">
                     <div class="card-head-row">
-                      <div class="card-title">Support Tickets</div>
+                      <div class="card-title">Dealers in your area</div>
                       <div class="card-tools">
                         <ul
                           class="nav nav-pills nav-secondary nav-pills-no-bd nav-sm"
